# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-llamacpp-module"
version = "0.0.2"
authors = ["ASIMOV Community"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV Llamacpp module."
#documentation = "https://docs.rs/asimov-llamacpp-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-llamacpp-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = ["command-line-utilities", "text-processing"]              # TODO
publish = false

[features]
default = ["all", "cli", "std"]
all = ["pretty", "tracing"]
cli = ["asimov-module/cli", "std", "dep:clap", "dep:clientele", "asimov-module/serde"]
std = ["asimov-module/std", "clap?/std", "clientele?/std"]
unstable = []

# Optional features:
pretty = []
tracing = ["asimov-module/tracing", "clientele?/tracing"]

[dependencies]
asimov-module = { version = "25.0.0-dev.21", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
ureq = { version = "3.1", features = ["json"] }
# Optional integrations:
clap = { version = "4.5", default-features = false, features = [
  "std",
], optional = true }
clientele = { version = "0.3.8", default-features = false, features = [
  "clap",
  "std",
], optional = true }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-llamacpp-prompter"
path = "src/prompter/main.rs"
required-features = ["cli"]
